# countryflag

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CACHE_SHARING_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_NOTES.md  LICENSE  MANIFEST.in  PEP517_MIGRATION.md  README.md  README_TIMING_LOGIC.md  demo_cache_sharing.py  demo_step8_caching.py  example_timing_test.py  mkdocs.yml  mypy.ini  platform_timing_logic.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_step9_alias_normalization.py  tox.ini
.github/workflows/: ci.yml  publish.yml
benchmarks/: run_benchmarks.py
ci_logs/windows-reference/: ANALYSIS_SUMMARY.md  README.md
countryflag/: countryflag.py
countryflag/src/: countryflag.py
deploy/: Dockerfile  docker-compose.yml
deploy/aws/: cloudformation.yaml
deploy/kubernetes/: deployment.yaml  hpa.yaml  ingress.yaml
deploy/monitoring/: grafana-dashboard.json  prometheus-servicemonitor.yaml
deploy/nginx/: nginx.conf
docs/: CHANGELOG.md  DEVELOPER_NOTES.md  PEP517_MIGRATION.md  PROJECT_SUMMARY.md  audit.md  ci_failure_analysis.md  deployment_guide.md  index.md  windows_verification_results.md
docs/source/: api.rst  caching.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  migration.rst  performance.rst  plugins.rst  quickstart.rst  usage.rst
docs/tutorials/: plugin_development.md
examples/: cache_sharing_demo.py  comprehensive_usage.py  timing_logic_demo.py
examples/plugins/: custom_cache_plugin.py  custom_data_source_plugin.py  custom_output_format_plugin.py
examples/real_world/: batch_processing.py  cli_script.py  web_application.py
scripts/: run_benchmarks.sh
src/: countryflag.py
src/countryflag/: __init__.py  __main__.py  lookup.py
src/countryflag/cache/: __init__.py  base.py  disk.py  memory.py
src/countryflag/cli/: __init__.py  main.py
src/countryflag/core/: __init__.py  converters.py  exceptions.py  flag.py  models.py
src/countryflag/plugins/: __init__.py  base.py
src/countryflag/utils/: __init__.py  io.py  suppress.py  text.py  validation.py
temp_tests_backup/: test_cli.py
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
tests/: conftest.py  test_cache.py  test_cli.py  test_countryflag.py  test_deadlock_regression.py  test_error_handling.py  test_final_error_integration.py  test_get_flag_cache_memoisation.py  test_global_cache_sharing.py  test_lookup_reverse.py  test_memory_cache_hits.py  test_platform_specific_rendering.py  test_plugins.py  test_step8_get_flag_fr_twice.py  test_type_checking.py  test_unicode_regional_indicators.py  test_validation.py
tests/performance/: test_benchmarks.py
tests/property/: test_properties.py
tests/stress/: test_large_datasets.py
tests/unit/: test_core.py  test_memory_cache.py
