[metadata]
name = countryflag
version = 1.1.1
description = A Python package for converting country names into emoji flags
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lendersmark/countryflag
author = Lendersmark
author_email = author@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    emoji-country-flag
    country_converter
    typeguard
    prompt_toolkit
    aioconsole

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
dev =
    black
    isort
    mypy
    pytest
    pytest-cov
    tox
    pre-commit
    sphinx
    sphinx-rtd-theme
    hypothesis
    flake8
    flake8-docstrings
    flake8-comprehensions
    flake8-bugbear
    flake8-annotations
test =
    pytest
    pytest-cov
    pytest-benchmark
    hypothesis
    psutil
    cli_test_helpers
docs =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    countryflag = countryflag.cli.main:main
